--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ducks</title>
-    
+
     <!-- page icon -->
     <link rel="icon" href="./img/logo.png" type="icon">
 
@@ -19,10 +20,63 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
-<body>
-    
+
+<body  data-bs-spy="scroll" data-bs-target="#navbar">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/logo.png" alt="logo-ducks-debugging">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse offcanvas offcanvas-end align-items-start flex-lg-wrap align-content-lg-end ps-2" data-bs-backdrop="static"
+                    tabindex="-1" id="navbarNav">
+                    <div class="offcanvas-header">
+                        <a href="#" class="offcanvas-title">
+                            <img src="./img/logo.png" alt="logo-ducks-debugging">
+                        </a>
+                    </div>
+                    <ul class="navbar-nav offcanvas-body">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#jumbo">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">I punti di forza</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Recensioni</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Paperelle</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FAQs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Newsletter</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="" id="jumbo">
+            <div class="jumbo-img"></div>
+            <div class="jumbo-content"></div>
+        </div>
+    </header>
+    <main>
+        <section id="i-punti-di-forza"></section>
+        <section id="recensioni"></section>
+        <section id="paperelle"></section>
+        <section id="faqs"></section>
+    </main>
+    <footer id="newsletter"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
