--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <!-- page icon -->
     <link rel="icon" href="./img/logo.png" type="icon">
 
+    <!-- google fonts -->
+    <!-- font poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    
+    <!-- font montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
@@ -23,7 +37,7 @@
 
 <body  data-bs-spy="scroll" data-bs-target="#navbar">
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" id="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo.png" alt="logo-ducks-debugging">
@@ -32,7 +46,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse offcanvas offcanvas-end align-items-start flex-lg-wrap align-content-lg-end ps-2" data-bs-backdrop="static"
+                <div class="navbar-collapse offcanvas offcanvas-end align-items-start flex-lg-wrap align-content-lg-end ps-2" data-bs-backdrop="true"
                     tabindex="-1" id="navbarNav">
                     <div class="offcanvas-header">
                         <a href="#" class="offcanvas-title">
@@ -62,9 +76,17 @@
                 </div>
             </div>
         </nav>
-        <div class="" id="jumbo">
-            <div class="jumbo-img"></div>
-            <div class="jumbo-content"></div>
+        <div class="jumbo row row-cols-1 row-cols-md-2 g-0"id="jumbo">
+            <div class="col jumbo-item">
+                <img src="./img/banner-image.png" alt="" class="jumbo-img">
+            </div>
+            <div class=" col jumbo-content jumbo-item flex-grow-1 text-center d-flex flex-column justify-content-center">
+                <div>
+                    <h1 class="jumbo-title">Rubber Duck Debuggings</h1>
+                    <p class="jumbo-paragraph">Spiegare il codice a una paperella di gomma aiuta i progammatori a chiarire il pensiero e individuare errori nascosti.</p>
+                    <a href="#" type="button" class="btn btn-outline-custom rounded-0">ACQUISTA SUBITO</a>
+                </div>
+            </div>
         </div>
     </header>
     <main>
