sezione paperelle e comportamento responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    
+
     <!-- font montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,8 +46,8 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse offcanvas offcanvas-end align-items-start flex-lg-wrap align-content-lg-end ps-2" data-bs-backdrop="true"
-                    tabindex="-1" id="navbarNav">
+                <div class="navbar-collapse offcanvas offcanvas-end align-items-start flex-lg-wrap align-content-lg-end ps-2"
+                    data-bs-backdrop="true" tabindex="-1" id="navbarNav">
                     <div class="offcanvas-header">
                         <a href="#" class="offcanvas-title">
                             <img src="./img/logo.png" alt="logo-ducks-debugging">
@@ -61,10 +61,10 @@
                             <a class="nav-link" href="#i-punti-di-forza">I punti di forza</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recensioni</a>
+                            <a class="nav-link" href="#recensioni">Recensioni</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Paperelle</a>
+                            <a class="nav-link" href="#paperelle">Paperelle</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">FAQs</a>
@@ -76,35 +76,43 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbo row row-cols-1 row-cols-lg-2 g-0"id="jumbo">
+        <div class="jumbo row row-cols-1 row-cols-lg-2 g-0" id="jumbo">
             <div class="col jumbo-item">
                 <img src="./img/banner-image.png" alt="" class="jumbo-img">
             </div>
-            <div class=" col jumbo-content jumbo-item flex-grow-1 text-center d-flex flex-column justify-content-center">
+            <div
+                class=" col jumbo-content jumbo-item flex-grow-1 text-center d-flex flex-column justify-content-center">
                 <div>
                     <h1 class="jumbo-title">Rubber Duck Debuggings</h1>
-                    <p class="jumbo-paragraph">Spiegare il codice a una paperella di gomma aiuta i progammatori a chiarire il pensiero e individuare errori nascosti.</p>
+                    <p class="jumbo-paragraph">Spiegare il codice a una paperella di gomma aiuta i progammatori a
+                        chiarire il pensiero e individuare errori nascosti.</p>
                     <a href="#" type="button" class="btn btn-outline-custom rounded-0">ACQUISTA SUBITO</a>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <section id="i-punti-di-forza" class="my-5">
+        <section id="i-punti-di-forza" class="my-5 container-fluid">
             <div class="row row-cols-1 row-cols-lg-3 g-5">
                 <div class="col">
                     <div class="row row-cols-1 g-5">
                         <div class="col text-center">
-                                <h2 class="px-title">Lunga Durata della Batteria</h2>
-                                <p class="px-paragraph">Goditi ore di assistenza continua nella risoluzione dei bug grazie alla lunga durata della "batteria" (ovvero, la tua pazienza) della paperella di gomma.</p>
+                            <h2 class="px-title">Lunga Durata della Batteria</h2>
+                            <p class="px-paragraph">Goditi ore di assistenza continua nella risoluzione dei bug grazie
+                                alla lunga durata della "batteria" (ovvero, la tua pazienza) della paperella di gomma.
+                            </p>
                         </div>
                         <div class="col text-center">
                             <h2 class="px-title">Compatibilità Universale</h2>
-                            <p class="px-paragraph">Funziona con tutti i linguaggi di programmazione e sistemi operativi, la paperella di gomma è l'unico strumento di debugging che non necessita di aggiornamenti.</p>
+                            <p class="px-paragraph">Funziona con tutti i linguaggi di programmazione e sistemi
+                                operativi, la paperella di gomma è l'unico strumento di debugging che non necessita di
+                                aggiornamenti.</p>
                         </div>
                         <div class="col text-center">
                             <h2 class="px-title">Design Elegante</h2>
-                            <p class="px-paragraph">Mostra con orgoglio il design elegante e raffinato della tua paperella di gomma, disponibile in vari colori per abbinarsi al tuo stile di programmatore.</p>
+                            <p class="px-paragraph">Mostra con orgoglio il design elegante e raffinato della tua
+                                paperella di gomma, disponibile in vari colori per abbinarsi al tuo stile di
+                                programmatore.</p>
                         </div>
                     </div>
                 </div>
@@ -115,22 +123,59 @@
                     <div class="row row-cols-1 g-5">
                         <div class="col text-center">
                             <h2 class="px-title">Resistenza agli Spruzzi</h2>
-                            <p class="px-paragraph">Perfetta per resistere ai piccoli incidenti con caffè e bevande, la tua paperella di gomma non teme schizzi, mantenendoti sempre pronto per il debugging.</p>
+                            <p class="px-paragraph">Perfetta per resistere ai piccoli incidenti con caffè e bevande, la
+                                tua paperella di gomma non teme schizzi, mantenendoti sempre pronto per il debugging.
+                            </p>
                         </div>
                         <div class="col text-center">
                             <h2 class="px-paragraph">Portabilità</h2>
-                            <p class="px-paragraph">Leggera e facile da trasportare, la paperella di gomma può essere il tuo compagno di lavoro ovunque tu vada. Portala con te per un supporto costante.</p>
+                            <p class="px-paragraph">Leggera e facile da trasportare, la paperella di gomma può essere il
+                                tuo compagno di lavoro ovunque tu vada. Portala con te per un supporto costante.</p>
                         </div>
                         <div class="col text-center">
                             <h2 class="px-title">Promemoria Anti-Stress</h2>
-                            <p class="px-paragraph">Quando lo stress del codice diventa troppo, spremi la tua paperella di gomma per un rapido sollievo anti-stress, senza bisogno di software complicati.</p>
+                            <p class="px-paragraph">Quando lo stress del codice diventa troppo, spremi la tua paperella
+                                di gomma per un rapido sollievo anti-stress, senza bisogno di software complicati.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="recensioni"></section>
-        <section id="paperelle"></section>
+        <section id="recensioni">
+            <h2 class="text-center sections-title py-5">Cosa ne pensano i nostri sviluppatori</h2>
+        </section>
+        </div>
+        <section  class="container-fluid py-5 bg-section-paperelle" id="paperelle">
+            <h2 class="sections-title text-center">La collezione di paperelle</h2>
+            <p class="py-5 text-center">Una paperella per ogni stile di programmazione</p>
+            <div class="row row-cols-2 row-cols-lg-3">
+                <div class="col">
+                    <figure>
+                        <img src="./img/product-item1.png" alt="cool-duck">
+                        <div class="stars pt-2">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
+                        <figcaption class="fw-semibold pt-2">Cool-duck</figcaption>
+                        <p class="fw-semibold pt-2 duck-price">&dollar; 15</p>
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="./img/product-item2.png" alt="classic-duck">
+                        <div class="stars pt-2">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
+                        <figcaption class="fw-semibold pt-2">Classic-duck</figcaption>
+                        <p class="fw-semibold pt-2 duck-price">&dollar; 29</p>
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="./img/product-item3.png" alt="bat-duck">
+                        <div class="stars pt-2">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
+                        <figcaption class="fw-semibold pt-2">Bat-duck</figcaption>
+                        <p class="fw-semibold pt-2 duck-price">&dollar; 69</p>
+                    </figure>
+                </div>
+            </div>
+
+        </section>
         <section id="faqs"></section>
     </main>
     <footer id="newsletter"></footer>
