--- a/index.html
+++ b/index.html
@@ -176,7 +176,72 @@
             </div>
 
         </section>
-        <section id="faqs"></section>
+        <section class="py-5 container-fluid" id="faqs">
+            <div class="row">
+                <div class="col">
+                    <img src="./img/single-image2.png" alt="">
+                </div>
+                <div class="col">
+                    <h3 class="sections-title">FAQs</h3>
+                    <div class="accordion" id="accordionfaqs">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faqsOne" aria-expanded="true"
+                                    aria-controls="faqsOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="faqsOne" class="accordion-collapse collapse show">
+                                <div class="accordion-body">
+                                    <strong>This is the first item’s accordion body.</strong> It is shown by default, until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
+                                    custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faqsTwo" aria-expanded="false"
+                                    aria-controls="faqsTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="faqsTwo" class="accordion-collapse collapse">
+                                <div class="accordion-body">
+                                    <strong>This is the second item’s accordion body.</strong> It is hidden by default, until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
+                                    custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faqsThree" aria-expanded="false"
+                                    aria-controls="faqsThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="faqsThree" class="accordion-collapse collapse">
+                                <div class="accordion-body">
+                                    <strong>This is the third item’s accordion body.</strong> It is hidden by default, until the collapse
+                                    plugin adds the appropriate classes that we use to style each element. These classes control the overall
+                                    appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
+                                    custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go
+                                    within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer id="newsletter"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
