aggiunte icone promo

--- a/index.html
+++ b/index.html
@@ -251,12 +251,48 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    
+            <div class="row row-cols-2 row-cols-lg-3">
+                <div class="col promo-item text-center mt-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="balloon" viewBox="0 0 24 24">
+                        <g fill="none" stroke="#2E45CC" stroke-linecap="round" stroke-width="1.5">
+                            <path
+                                d="M8 16.607c1.15.86 2.518 1.38 4 1.393c4.142.034 7.594-3.92 7.56-8.196C19.527 5.53 16.142 2.034 12 2c-4.142-.034-7.473 3.404-7.44 7.68A8.88 8.88 0 0 0 5.244 13" />
+                            <path
+                                d="M15.5 9a3.035 3.035 0 0 0-3-3M12 20.35c.321 0 .482 0 .593-.022c.654-.128 1.051-.772.858-1.39c-.033-.105-.109-.242-.261-.515M12 20.35c-.321 0-.482 0-.593-.022c-.654-.128-1.051-.772-.858-1.39c.033-.105.109-.242.261-.515M12 20.35v2.15" />
+                        </g>
+                    </svg>
+                    <h3>100% Prodotto Di Qualità</h3>
+                    <p>Abbiamo anche la possibilità di ritiro direttamente dallo stagno</p>
+
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col promo-item text-center mt-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="bag-heart" viewBox="0 0 24 24">
+                        <g fill="none">
+                            <path fill="#2E45CC"
+                                d="m12 12.191l-.519.542a.75.75 0 0 0 1.038 0L12 12.191Zm-.957 3.675l-.444.604l.444-.604Zm1.914 0l-.444-.605l.444.605Zm-.957.462v.75v-.75Zm-.514-1.067c-.417-.307-.878-.69-1.227-1.093c-.368-.426-.509-.757-.509-.971h-1.5c0 .77.441 1.45.875 1.952c.453.525 1.014.984 1.474 1.321l.887-1.21ZM9.75 13.197c0-.576.263-.827.492-.907c.25-.088.714-.06 1.24.443l1.037-1.083c-.825-.79-1.861-1.096-2.773-.776c-.934.327-1.496 1.226-1.496 2.323h1.5Zm3.65 3.273c.46-.337 1.022-.796 1.475-1.32c.434-.502.875-1.183.875-1.953h-1.5c0 .214-.141.545-.51.971c-.348.403-.809.786-1.226 1.093l.887 1.21Zm2.35-3.273c0-1.097-.563-1.996-1.496-2.323c-.912-.32-1.948-.014-2.773.776l1.038 1.083c.525-.503.989-.531 1.24-.443c.228.08.491.33.491.907h1.5ZM10.6 16.47c.368.27.782.608 1.4.608v-1.5c-.024 0-.04 0-.094-.03a4 4 0 0 1-.42-.287l-.887 1.21Zm1.914-1.21a4 4 0 0 1-.42.289c-.054.029-.07.029-.094.029v1.5c.618 0 1.032-.337 1.4-.608l-.886-1.21Z" />
+                            <path stroke="#2E45CC" stroke-linecap="round" stroke-width="1.5"
+                                d="M9 6V5a3 3 0 1 1 6 0v1m5.224 6.526c-.586-3.121-.878-4.682-1.99-5.604C17.125 6 15.537 6 12.36 6h-.72c-3.176 0-4.764 0-5.875.922c-1.11.922-1.403 2.483-1.989 5.604c-.823 4.389-1.234 6.583-.034 8.029C4.942 22 7.174 22 11.639 22h.722c4.465 0 6.698 0 7.897-1.445c.696-.84.85-1.93.696-3.555" />
+                        </g>
+                    </svg>
+                    <h3>Spedizione Gratuita</h3>
+                    <p>Dal magazzino alla scrivania</p>
+
+                </div>
+                <div class="col promo-item text-center mt-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="handiplast" viewBox="0 0 24 24">
+                        <g fill="none">
+                            <path stroke="#2E45CC" stroke-linecap="round" stroke-width="1.5"
+                                d="M13.5 7.642L9.071 3.213a4.142 4.142 0 0 0-5.858 5.858L14.93 20.787a4.142 4.142 0 0 0 5.858-5.858l-4.358-4.358" />
+                            <path stroke="#2E45CC" stroke-linecap="round" stroke-width="1.5"
+                                d="m12 17.858l-2.929 2.929A4.142 4.142 0 0 1 2.596 20m3.546-8l-2.929 2.929c-.322.322-.58.685-.774 1.071M12 6.142l2.929-2.929a4.142 4.142 0 1 1 5.858 5.858L17.857 12" />
+                            <path fill="#2E45CC"
+                                d="M15.841 12.871a.788.788 0 1 1-1.114 1.114a.788.788 0 0 1 1.114-1.114Zm-3.712-3.712a.787.787 0 1 0-1.114 1.114a.787.787 0 0 0 1.114-1.114Zm4.641 6.497a.787.787 0 1 1-1.114 1.114a.787.787 0 0 1 1.114-1.114ZM9.345 8.23A.788.788 0 1 0 8.23 9.346A.788.788 0 0 0 9.345 8.23Zm3.712 3.713a.787.787 0 1 1-1.113 1.114a.787.787 0 0 1 1.113-1.114Zm.928 2.785a.788.788 0 1 1-1.114 1.113a.788.788 0 0 1 1.114-1.113Zm-3.712-3.713a.787.787 0 1 0-1.114 1.114a.787.787 0 0 0 1.114-1.114Z" />
+                        </g>
+                    </svg>
+                    <h3>Rimborso Garantito</h3>
+                    <p>Ti rimborsiamo se la paperella fa quack</p>
+
+                </div>
             </div>
         </section>
     </main>
